[package]
name = "Advent-of-Code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1"
path = "./src/day1.rs"
test = false
bench = true

[[bin]]
name = "day2"
path = "./src/day2.rs"
test = false
bench = true

[[bin]]
name = "day3"
path = "./src/day3.rs"
test = false
bench = true

[[bin]]
name = "day4"
path = "./src/day4.rs"
test = false
bench = true

[[bin]]
name = "day5"
path = "./src/day5.rs"
test = false
bench = true

[[bin]]
name = "day6"
path = "./src/day6.rs"
test = false
bench = true

[[bin]]
name = "day7"
path = "./src/day7.rs"
test = false
bench = true

[[bin]]
name = "day8"
path = "./src/day8.rs"
test = false
bench = true

[dependencies]
itertools = "0.12.0"
num = "0.4.1"
