[package]
name = "Advent-of-Code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day01"
path = "./src/day01.rs"
test = false
bench = true

[[bin]]
name = "day02"
path = "./src/day02.rs"
test = false
bench = true

[[bin]]
name = "day03"
path = "./src/day03.rs"
test = false
bench = true

[[bin]]
name = "day04"
path = "./src/day04.rs"
test = false
bench = true

[[bin]]
name = "day05"
path = "./src/day05.rs"
test = false
bench = true

[[bin]]
name = "day06"
path = "./src/day06.rs"
test = false
bench = true

[[bin]]
name = "day07"
path = "./src/day07.rs"
test = false
bench = true

[[bin]]
name = "day08"
path = "./src/day08.rs"
test = false
bench = true

[[bin]]
name = "day09"
path = "./src/day09.rs"
test = false
bench = true

[[bin]]
name = "day10"
path = "./src/day10.rs"
test = false
bench = true

[[bin]]
name = "day11"
path = "./src/day11.rs"
test = false
bench = true

[[bin]]
name = "day12"
path = "./src/day12.rs"
test = false
bench = true

[[bin]]
name = "day13"
path = "./src/day13.rs"
test = false
bench = true

[[bin]]
name = "day14"
path = "./src/day14.rs"
test = false
bench = true

[[bin]]
name = "day15"
path = "./src/day15.rs"
test = false
bench = true

[dependencies]
itertools = "0.12.0"
num = "0.4.1"
